Fix wrong font family on some elements
It happened because an update normalize.css introduced
sans-serif as default instead of "inherits".

--- a/app/styles/base/_button.scss
+++ b/app/styles/base/_button.scss
@@ -1,5 +1,5 @@
 @mixin button {
-	@extend %font-bold;
+	font-weight: bold;
 	align-items: center;
 	background-color: $superlightgray;
 	box-shadow: $box-shadow;
