--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -1,12 +1,4 @@
-/**
- * Typography
- * an attempt to group font families and sizes for base elements
- */
 html {
-	@extend %font-regular;
-	font-family: "Maison Neue", $sans-fallback;
-	font-display: swap;
-
 	font-size: $base-font-size;
 	line-height: $base-line-height;
 
@@ -21,6 +13,20 @@ html {
 	@media (min-width: $layout-xxxl) {
 		font-size: 20px;
 	}
+}
+
+// Change the font family for all the elements that need it.
+
+html {
+	font-family: "Maison Neue", $sans-fallback;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+	font-family: inherit;
 }
 
 // apparently it can be bad to use this on the html element, so:
@@ -39,7 +45,7 @@ blockquote {
 
 strong,
 b {
-	@extend %font-bold;
+	font-weight: bold;
 }
 
 em {
@@ -66,7 +72,7 @@ h1,
 h2,
 h3,
 h4 {
-	@extend %font-bold;
+	font-weight: bold;
 }
 
 h1,
@@ -135,3 +141,4 @@ pre,
 	color: $text-color;
 	padding: 3px 4px 0;
 }
+
